<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/uuid_container"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/feature_section_padding"
        android:paddingRight="@dimen/feature_section_padding" >

        <TextView
            android:id="@+id/uuid_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/update_uuid" />

        <TextView
            android:id="@+id/uuid_modify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:textSize="@dimen/uuid_textSize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/major_minor_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="@dimen/feature_section_padding"
        android:paddingRight="@dimen/feature_section_padding" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/major_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/update_major" />

            <TextView
                android:id="@+id/major_modify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:textSize="26sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/minor_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/update_minor" />

            <TextView
                android:id="@+id/minor_modify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="26sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rssi_container"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/feature_section_padding"
        android:paddingRight="@dimen/feature_section_padding" >

        <TextView
            android:id="@+id/rssi_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/update_rssi" />

        <TextView
            android:id="@+id/rssi_modify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/rssi_unit"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginLeft="4dp"
            android:gravity="bottom"
            android:text="@string/update_rssi_unit"
            android:textSize="12sp" />
    </LinearLayout>

    <Button
        android:id="@+id/disconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="断开连接" />

</LinearLayout>